Curves to Alembic problems #60503

Closed
opened 2019-01-14 14:25:41 +01:00 by Julien Kaspar · 4 comments
Member

Blender Version
Broken: 2.80 a6b2ec0bc231

Short description of error
When exporting and importing curves to alembic, certain errors appear. Here is an example file.
bug_report.blend
Export the curves as alembic and when importing them into a file this happens as far as I can tell:

  • The curve loses its Geometry settings. In the example file the curves have depth and a full Fill Mode to them but once imported they switch back to the default settings of newly created curves.
  • The curve type is switched to paths instead of bezier.
  • Separate curves within the same object are being connected randomly. This apparently also results in some far stretched curves in comparison to the original.
**Blender Version** Broken: 2.80 a6b2ec0bc231 **Short description of error** When exporting and importing curves to alembic, certain errors appear. Here is an example file. [bug_report.blend](https://archive.blender.org/developer/F6285637/bug_report.blend) Export the curves as alembic and when importing them into a file this happens as far as I can tell: - The curve loses its Geometry settings. In the example file the curves have depth and a full Fill Mode to them but once imported they switch back to the default settings of newly created curves. - The curve type is switched to paths instead of bezier. - Separate curves within the same object are being connected randomly. This apparently also results in some far stretched curves in comparison to the original.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Sybren A. Stüvel was assigned by Julien Kaspar 2019-01-14 14:26:33 +01:00
Author
Member

I think the best solution for the studio right now would be to have the option to export curves as meshes like already mentioned here: blender/blender#51311

I think the best solution for the studio right now would be to have the option to export curves as meshes like already mentioned here: blender/blender#51311

The curve loses its Geometry settings. In the example file the curves have depth and a full Fill Mode to them but once imported they switch back to the default settings of newly created curves.
The curve type is switched to paths instead of bezier.

Those issues can only be solved by figuring out how to store those settings in Alembic in a way that other software understands it as well.

Separate curves within the same object are being connected randomly. This apparently also results in some far stretched curves in comparison to the original.

Can you attach before & after images, so that I know what you're looking at?

I think the best solution for the studio right now would be to have the option to export curves as meshes

I think that's a doable approach. That way we circumvent the unknowns I describe above.

> The curve loses its Geometry settings. In the example file the curves have depth and a full Fill Mode to them but once imported they switch back to the default settings of newly created curves. > The curve type is switched to paths instead of bezier. Those issues can only be solved by figuring out how to store those settings in Alembic in a way that other software understands it as well. > Separate curves within the same object are being connected randomly. This apparently also results in some far stretched curves in comparison to the original. Can you attach before & after images, so that I know what you're looking at? > I think the best solution for the studio right now would be to have the option to export curves as meshes I think that's a doable approach. That way we circumvent the unknowns I describe above.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#60503
No description provided.