source/blender/alembic/ABC_alembic.h
@@ -58,6 +58,7 @@ struct AlembicExportParams {
 	bool normals;
 	bool vcolors;
 	bool apply_subdiv;
+	bool curves_as_mesh;
 	bool flatten_hierarchy;
 	bool visible_layers_only;
 	bool renderable_only;
