source/blender/alembic/intern/abc_exporter.h
@@ -71,6 +71,7 @@ struct ExportSettings {
 	bool export_particles;
 
 	bool apply_subdiv;
+	bool curves_as_mesh;
 	bool use_subdiv_schema;
 	bool export_child_hairs;
 	bool export_ogawa;
